# leetcode-rust

./: Cargo.toml  Makefile  README.md  install.sh  opencode.json
.claude/skills/: generate-leetcode-doc.json
.claude/templates/: doc_template.md
claude_doc/: 01-refactoring-summary.md  02-performance-optimization.md  README.md
doc/: s0001_01_哈希表.md  s0002_01_两数相加.md  s0003_01_哈希.md  s0019_remove_nth_node_from_end_of_list.md  s0024-01_非递归.md  s0024-02_递归写法.md  s0026_01_移除重复元素_双指针 copy.md  s0027_01_移除目标值元素_双指针.md  s0059_01_螺旋矩阵II_方向数组法.md  s0151_01_反转字符串中的单词.md  s0206_01_反转链表_迭代与递归.md  s0208_01_实现Trie前缀树.md  s0209_01_最小长度子数组和.md  s0242_01_有效的字母异位词.md  s0303_01_区域和检索_前缀和优化.md  s0344_01_反转字符串.md  s0385_01_迷你解析器_栈解析.md  s0454_01_四数之和.md  s0541_01_反转字符串II.md  s0707_01_设计链表_单链表实现.md  s0844_01_比较含退格的字符串.md  s0977_01_有序数组平方排序.md  s1114_01_按序打印_多同步机制对比.md  s1115_01_FooBar_多实现对比.md  s1472_01_设计浏览器历史记录_多实现对比.md
src/: fetcher.rs  lib.rs  main.rs
src/cli/: commands.rs  handlers.rs  mod.rs  template.rs
src/fetcher/: api_models.rs  client.rs  mod.rs  models.rs  transform.rs
src/problem/: mod.rs  p0003_longest_substring_without_repeating_characters.rs  p0018_4sum.rs  p0344_reverse_string.rs  p0385_mini_parser.rs  p0977_squares_of_a_sorted_array.rs  p1297_maximum_number_of_occurrences_of_a_substring.rs  p1472_design_browser_history.rs  p2563_count_the_number_of_fair_pairs.rs  p2653_sliding_subarray_beauty.rs
src/solution/: mod.rs  s0001_two_sum.rs  s0002_add_two_numbers.rs  s0003_longest_substring_without_repeating_characters.rs  s0011_container_with_most_water.rs  (+58 more)
(+238 files in other folders)
