[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["alei <rayingecho@gmail.com>"]
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_derive = "1.0.228"
rand = "0.9.2"
regex = "1.12.2"
futures = { version = "0.3.31", features = ["thread-pool"] }
surf = "2.3.1"
openssl-sys = { version = "0.9.110", features = ["vendored"] }
fmt = "0.1.0"
clap = { version = "4.5", features = ["derive"] }

[lib]
doctest = false
test = true
